--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-lary linda
+<html>
+    <head>
+        <title>Meu site</title>
+    </head>
+    <body>
+        Aqui vai aparecer o conteúdo da página.
+    </body>
+</html>
